Fixed contact page gap

--- a/src/index.css
+++ b/src/index.css
@@ -666,7 +666,7 @@ a:active {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  gap: 4%;
+  gap: 2%;
   border: 1px solid black;
   background-color: var(--second);
   padding: 1vh;
